Fix excessive word break on table headings.

--- a/asset/css/admin.css
+++ b/asset/css/admin.css
@@ -209,6 +209,7 @@
 .tablesaw-swipe-wrapper th,
 .record.browse th {
   width: 7rem;
+  word-break: normal;
 }
 
 .record.browse .select-all {
